linked homepage to issues page, and handled possible error to improve user experience

--- a/single-repo.html
+++ b/single-repo.html
@@ -23,7 +23,11 @@
   
   <main>
     <div id="issues-container" class="list-group">
+      <!-- the links to issues will be dynamically created here -->
+    </div>
 
+    <div id="limit-warning">
+      <!-- if the repo has more than 30 issues, a limit warning will be dynamically created here -->
     </div>
   </main>
 
